# kolomolo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SOLUTION.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  eval.yml  ingest.yml
app/: streamlit_app.py
deploy/: tunnel.sh
doc/: DEPLOYMENT.md  MODELS_AND_SERVICES.md  POC_ARCHITECTURE.md  PRESENTATION.md  QA_PREP.md  SCALE_ARCHITECTURE.md
doc/diagrams/: architecture.mmd  graph_schema.mmd
scripts/: smoke.py  smoke.sh
src/cpap_graphrag/: __init__.py  config.py  llm.py
src/cpap_graphrag/agent/: __init__.py  answer.py  planner.py  tools.py  verify.py
src/cpap_graphrag/baseline/: __init__.py  vector_rag.py
src/cpap_graphrag/eval/: __init__.py  metrics.py  questions.yaml  run_eval.py
src/cpap_graphrag/graph/: __init__.py  client.py  queries.py
src/cpap_graphrag/ingestion/: __init__.py  cli.py  dedup.py  extract.py  inventory.py  load.py  parse.py  resolve.py  segment.py  state.py
src/cpap_graphrag/ontology/: __init__.py  features.py  schema.py  units.py
