[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cpap-graphrag"
version = "0.1.0"
description = "SleepMedCorp CPAP Knowledge Graph & GraphRAG proof-of-concept"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

# Install in editable mode so `python -m cpap_graphrag.*` and `streamlit run` resolve imports:
#     pip install -e .
